kubernetes-v2/personal/applications/grist/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: grist
  namespace: grist
  labels:
    app: grist

spec:
  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: grist
  template:
    metadata:
      labels:
        app: grist
    spec:
      containers:
        - name: main

          image: gristlabs/grist:1.7.8

          resources: {}
            # requests:
            #   cpu: "500m"
            #   memory: "512Mi"
            # limits:
            #   cpu: "500m"
            #   memory: "512Mi"

          ports:
            - name: http
              containerPort: 8484

          volumeMounts:
            - mountPath: /persist
              name: data-volume

      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: grist-data
