kubernetes-v2/personal/applications/grist/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: grist
  namespace: grist
  labels:
    app: grist

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: grist
